--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,27 +12,28 @@
   height: 80px;
 }
 
-/* .shadow {
+.shadow {
   background-color: rgb(203, 203, 212);
   border-radius: 5px;
   width: 50%;
   height: 100%;
   border: 5px;
-} */
-.versus h1 {
+}
+
+#versus h1 {
   color: brown;
   font-size: 60px;
   padding: 0%;
 }
 
-/* .versus div {
+.changeVersus {
   transform: rotate(-20deg);
   text-align: center;
   background-color: rgb(21, 128, 7);
   border-radius: 5px;
   height: 80%;
   width: 80%;
-} */
+}
 
 .row .refresh-button {
   width: 80px;
